2010-11-08  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_recode_db.pl: Checked if the tables exists
	to avoid the recodification in case of purely open 
	installations

2010-11-08  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_sync_db.pl: Changed from DELETE to
	TRUNCATE in empty tables operation

2010-11-08  Dario Rodriguez <dario.rodriguez@artica.es>

	* util/pandora_recode_db.pl: Added talert_template, tconfig_os,
	talet_actions and ttipo_modulo to encode names fields.

2010-11-07  Junichi Satoh  <junichi@rworks.jp>

	* Makefile.PL: Added 'INSTALLSITELIB' for FreeBSD. (undefined)

2010-11-05  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_sync_db.pl: Changed the tevento table
	synchronization to sync it only when the flag sync_data 
	is 1

2010-11-05  Sancho Lerena <slerena@artica.es>

	* Makefile.PL: Now default install for libs are the same than used in
	RPM, this will help to avoid problems of duped libs.

	* pandora_server.spec,
        pandora_server.redhat.spec: Update version and release.

2010-11-04  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	util/pandora_manage.pl: Improved the policies
	appliement with checks and the external
	alerts addition

2010-11-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: limpia_cadena removes unwanted
	  characters instead or replacing them with blank spaces.

2010-11-03  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_recode_db.pl: Added a recode script to add
	html entities to secific strings of a database. This script is usefull
	to 3.1 to 3.2 migration of Pandora FMS.

2010-11-02  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	lib/PandoraFMS/ReconServer.pm
	lib/PandoraFMS/DataServer.pm
	lib/PandoraFMS/Tools.pm: Fixed insert db operations
	in server to store the html entities. This improves
	fix bug 3096436

2010-11-02  Sergio Martin <sergio.martin@artica.es>
