@@ -1,5 +1,9 @@
 2010-11-08  Sergio Martin <sergio.martin@artica.es>
 
+	* util/pandora_sync_db.pl: Fixed array pass
+
+2010-11-08  Sergio Martin <sergio.martin@artica.es>
+
 	* util/pandora_recode_db.pl: Checked if the tables exists
 	to avoid the recodification in case of purely open 
 	installations
